[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-disentangling"
version = "0.0.0"
description = "Disentangling synthetic mixed 1D spectra with masked-pretrained transformers"
requires-python = ">=3.10"
# Runtime deps are pinned loosely in requirements.txt; kept out of here so the two
# don't drift. Install with `pip install -r requirements.txt && pip install -e .`.

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
